# platform-tool

./: Cargo.toml  README.md  uncomplete.txt
src/: commands.rs  main.rs  multi_tasks.rs  task_impl.rs
src/example/: call_contract.json  deploy_contract.json  query_contract.json  samples.bat  test.abi
