[package]
name = "platform-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
tokio = {version = "1.12.0", features = ["full"]}
web3 = { git = "https://github.com/simonjiao/rust-web3.git", branch = "findora", features = ["signing"] }
secp256k1 = { version = "0.21", features = ["recovery"]}